--- a/contents/css/introStyle.css
+++ b/contents/css/introStyle.css
@@ -65,7 +65,8 @@
 	display: block;
 	float: left;
 	width: 120px;
-	height: 40px;
+	padding-top: 8px;
+	padding-bottom: 17px;
 	margin: 3px;
 	border: 1px solid #90C060;
 	background: linear-gradient(#FFF 50%, #BBB);
