--- a/contents/css/memberStyle.css
+++ b/contents/css/memberStyle.css
@@ -64,36 +64,43 @@
 	top: 10px;
 	width: 190px;
 	height: 400px;
-	background-color: blue;
+	background-color: green;
+	border-radius: 10px;
 }
 
 #scroll_upside {
 	position: relative;
-	width: 190px;
+	width: 188px;
 	height: 60px;
-	background-color: green;
+	background: linear-gradient(#FFF 60%,#BBB);
+	border-radius: 5px;
+	border: solid 1px green;
 }
 
 #frame_left {
 	float: left;
-	width: 20px;
+	width: 15px;
 	height: 280px;
-	background-color: black;
+	background: -webkit-gradient(linear,left center, right center, from(green), to(#BBB));
+	background: -moz-linear-gradient(left, #BBB, #EEE);
+	border: solid 1px gray;
 }
 
 #memberwrap {
 	float: left;
 	height: 280px;
-	width: 150px;
+	width: 156px;
 	overflow: hidden;
-	background-color: red;
+
 }
 
 #frame_right {
 	float: left;
-	width: 20px;
+	width: 15px;
 	height: 280px;
-	background-color: black;
+	background: -webkit-gradient(linear,left center, right center, from(#BBB), to(green));
+	background: -moz-linear-gradient(left, #EEE, #BBB);
+	border: solid 1px gray;
 }
 
 #scroll_downside {
@@ -101,13 +108,15 @@
 	top: 280px;
 	width: 190px;
 	height: 60px;
-	background-color:green;
+	background: linear-gradient(#BBB, #FFF 60%);
+	border-radius: 5px;
+	border: solid 1px green;
 }
 
 .type_member {
 	float: left;
 	height: 70px;
-	width: 150px;
+	width: 156px;
 	border-radius: 5px;
 	background-color: #DDFFDD;
 }
@@ -115,6 +124,8 @@
 .type_member:hover {
 	cursor: pointer;
 }
+
+
 
 
 #member1 {
