--- a/contents/css/memberStyle.css
+++ b/contents/css/memberStyle.css
@@ -1,7 +1,10 @@
 
 @CHARSET "UTF-8";
 /*部員紹介*/
-#member_sub_window {
+
+/* ---------- 真ん中のウインドウ ---------- */
+/* -- ウインドウの包括　バックスクリーン -- */
+#member_window_wrap {
 	position: absolute;
 	left: 300px;
 	top: 10px;
@@ -12,6 +15,7 @@
 	overflow: hidden;
 }
 
+/* -- ウインドウの枠画像 -- */
 #window_frame {
 	position: relative;
 	width: 600px;
@@ -19,6 +23,7 @@
 	z-index: 8;
 }
 
+/* -- ウインドウ内の個人データ掲載ウインドウ -- */
 #personaldata_window {
 	position: absolute;
 	bottom: 20px;
@@ -33,46 +38,55 @@
 	font-weight: bold;
 }
 
+/* -- ウインドウ内の個人画像 -- */
 #charactor {
 	position: absolute;
-	left: 50px;
-	top: 100px;
+	left: 0px;
+	top: 0px;
+	margin-top: 50px;
+	margin-left: 70px;
 	z-index: 5;
 }
 
+/* -- 個人情報の項目名：　左側 -- */
 #profile_subjects {
 	float: left;
-
 	text-align: right;
 	margin-right: 10px;
 	margin-top: 35px;
 	margin-left: 8px;
 }
 
+/* -- 個人情報：　右側 -- */
 #myprofile {
 	float: left;
 	text-align: left;
+	width: 200px;
 	margin-top: 35px;
 }
-.subject_name {
 
-}
 
-.personaldata {
-	
-
-}
-
+/* ---------- メンバーセレクトウインドウ ---------- */
+/* --  -- */
 #memberwindow {
 	position: absolute;
 	left: 900px;
 	top: 10px;
-	width: 192px;
+	width: 200px;
 	height: 400px;
-	background-color: green;
-	border-radius: 10px;
+
 }
 
+/* -- メンバーアイコン表示領域 -- */
+#memberwrap {
+	float: left;
+	height: 280px;
+	width: 156px;
+	overflow: hidden;
+}
+
+
+/* ----- 枠 ----- */
 #scroll_upside {
 	position: relative;
 	width: 188px;
@@ -83,7 +97,10 @@
 	text-align: center;
 	font-size: 30px;
 	color: #D54;
+}
 
+#scroll_upside:hover {
+	cursor: pointer;
 }
 
 #frame_left {
@@ -91,15 +108,8 @@
 	width: 15px;
 	height: 278px;
 	background: -webkit-gradient(linear,left center, right center, from(green), to(#BBB));
-	background: -moz-linear-gradient(left, #BBB, #EEE);
+	background: -moz-linear-gradient(left, green, #BBB);
 	border: solid 1px gray;
-}
-
-#memberwrap {
-	float: left;
-	height: 280px;
-	width: 156px;
-	overflow: hidden;
 }
 
 #frame_right {
@@ -107,7 +117,7 @@
 	width: 15px;
 	height: 278px;
 	background: -webkit-gradient(linear,left center, right center, from(#BBB), to(green));
-	background: -moz-linear-gradient(left, #EEE, #BBB);
+	background: -moz-linear-gradient(left, #BBB, green);
 	border: solid 1px gray;
 }
 
@@ -123,6 +133,10 @@
 	color: #D54;
 }
 
+#scroll_downside:hover {
+	cursor: pointer;
+}
+/* -- メンバーセレクトアイコン -- */
 .type_member {
 	float: left;
 	height: 70px;
@@ -135,63 +149,50 @@
 	cursor: pointer;
 }
 
-
-
-
 #member1 {
 
 }
 
 #member2 {
 
-
 }
 
 #member3 {
 
-
 }
 
-
 #member4 {
-
 
 }
 
 #member5 {
 
-
 }
 
 #member6 {
-
 
 }
 
 #member7 {
 
-
 }
 
 #member8 {
-
 
 }
 
 #member9 {
 
-
 }
 
 #member10 {
 
-
 }
+
 #member11 {
 
-
 }
-#member12 {
 
+#member12 {
 
 }
